# prymes

./: README.md  pyproject.toml
src/prymes/: __init__.py  _bases_32  _bases_64  _utils.py
tests/: test.py
