[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prymes"
version = "0.0.1a0"
requires-python = ">= 3.12"
authors = [
  {name = "Jingyang Wang", email = "wangjy2010@126.com"},
]
maintainers = [
  {name = "Jingyang Wang", email = "wangjy2010@126.com"},
]
description = "Python package for prime-related things"
readme = "README.md"
keywords = ["primes", "number-theory"]
classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",

  "Operating System :: OS Independent",
]